--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,17 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dcbapp;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS financas
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Configura??es do jpa
+spring.jpa.database=postgresql
+# Configura??es do banco de dados
+spring.sql.init.platform=postgres
+spring.jpa.databaseplatform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://${API_DB_HOST:localhost}:8000/test
+spring.datasource.username=recuperacao
+spring.datasource.password=postgres
+# Configura??es do jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+springdoc:\
+  api-docs:
+enabled:true
+swagger-ui:
+version:2.0
