--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=recuperacao
-      - POSTGRES_DB=test
+      - POSTGRES_DB=minhasfinancas
     ports:
       - 8000:5432
 
